# landshark

./: .gitignore  CLAUDE.md  WINDOWS_SETUP.md  app.yaml  index.html  package-lock.json  package.json  vite.config.ts
backend/: pyproject.toml
backend/apps/accounts/: admin.py  enterprise_serializers.py  enterprise_urls.py  enterprise_views.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_is_developer.py  0003_organization_membership.py  0004_seed_default_org.py  0005_organization_tier.py
backend/apps/analysis/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/apps/analysis/migrations/: 0001_initial.py  0002_cotanalysis_ai_model_usersettings_default_model.py  0003_cotanalysis_generated_document_and_more.py  0004_cotanalysis_progress_step.py  0005_formtemplate_custom_prompt.py  0006_cotanalysis_prompt_text.py  0007_add_cancelled_status.py  0008_organizationsettings.py  0009_alter_formtemplate_file_and_more.py  0010_add_token_fields.py  0011_add_pipeline_fields.py  0012_add_revision_fields.py  0013_cotanalysis_document_name_snapshot.py  0014_formtemplate_organization.py  0015_cotanalysis_header_fields.py  0016_cotanalysis_header_extracted.py  0017_remove_formtemplate_organization_and_more.py  0018_organizationsettings_lock_member_api_keys.py
backend/apps/analysis/services/: ai_providers.py  chain_analyzer.py  document_analyzer.py  document_generator.py  document_parser.py  header.py  header_extract.py  instrument_format.py  pipeline.py  reanalyze.py  template_intake.py  template_renderer.py
backend/apps/analysis/static_templates/: cot_starter_template.docx
backend/apps/clients/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/clients/migrations/: 0001_initial.py  (+1 more)
backend/apps/core/: audit.py  models.py  serializers.py  urls.py  views.py
backend/apps/documents/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/prompts/: cot_analysis.txt  header_extract.txt  stage1_extract_instruments.txt  stage1_reextract_pages.txt  stage2_resolve_chain.txt
(+94 files in other folders)
